welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value Couleur
	if (getCouleurSol() == Couleur.orange) caseOrange = caseOrange+1;
                               ^