welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuits:Int = 0;
var caseOrange:Int = 0;
while(2 * biscuits != caseOrange + 1) {
	if (getCouleurSol() == Couleur.orange) caseOrange = caseOrange+1;
	if (estSurBiscuit()) biscuits = biscuits +1;
	avance();
}